syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

package peer;

message Header {
  bytes sender = 1 [(gogoproto.casttype) = "Identity"];
  bytes destination = 2 [(gogoproto.casttype) = "Identity"];

  uint64 session = 3;

  enum Type {
    PIPE_OPEN = 0;
    PIPE_CLOSE = 1;
    PIPE_DATA = 2;
    PIPE_UNKNOWN = 3;
    PIPE_OPENED = 4;
    PING = 5;
    PONG = 6;
  }

  Type type = 4;

  string pipe_name = 5;

  bytes body = 6;

  bool encrypted = 7;
}
